added AuthGuard, AlbumDetailsPage, added beta version of review system
